--- a/test.html
+++ b/test.html
@@ -34,7 +34,7 @@
         const messagesList = document.getElementById('messagesList');
 
         socket.onopen = function () {
-            console.log("✅ WebSocket Connected");
+            // console.log("✅ WebSocket Connected");
         };
 
         socket.onmessage = function (event) {
